# histogram-fill

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog  README.markdown  cabal.project  histogram-fill-cereal.cabal  histogram-fill.cabal  test-package-test.sh  test-package.sh
.github/workflows/: ci.yml
Data/: Histogram.hs
Data/Histogram/: Bin.hs  Cereal.hs  Fill.hs  Generic.hs  Parse.hs  ST.hs
Data/Histogram/Internal/: Accumulator.hs  Storage.hs
bench/: bin.hs
benchmarks/: benchmark.hs
histogram-fill/: ChangeLog  ChangeLog.md  histogram-fill.cabal
histogram-fill-binary/: histogram-fill-binary.cabal
histogram-fill-binary/Data/Histogram/: Binary.hs
histogram-fill-cereal/: ChangeLog  histogram-fill-cereal.cabal
histogram-fill-cereal/Data/Histogram/: Cereal.hs
histogram-fill-quickcheck/: histogram-fill-quickcheck.cabal
histogram-fill-quickcheck/Data/Histogram/: QuickCheck.hs
histogram-fill-serialise/: LICENSE  histogram-fill-serialise.cabal
histogram-fill-serialise/Data/Histogram/: Serialise.hs
histogram-fill-tests/: Test.hs  histogram-fill-tests.cabal
histogram-fill-tests/Test/: Binary.hs  Cereal.hs  Histogram.hs  Serialise.hs
histogram-fill/Data/: Histogram.hs
histogram-fill/Data/Histogram/: Adaptable.hs  Bin.hs  Fill.hs  Generic.hs  ST.hs  Tutorial.hs
histogram-fill/test/: QC.hs
histogram-fill/test/QC/: Instances.hs
test/: QC.hs
