Name:           histogram-fill
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov
Homepage:       
Category:       Data
Build-Type:     Simple
Synopsis:       Tool for creation of histograms.

Library
  Build-Depends:        base, array
  Exposed-modules:      Data.Histogram.Fill 
                        Data.Histogram.Bin
                        Data.Histogram.Internal.Accumulator
                        Data.Histogram.Internal.Storage
  GHC-Options:     -Wall -O2 -auto-all
