Name:           histogram-fill-cereal
Version:        0.6.2.1
Synopsis:       Library for histograms creation.
Description:
  Cereal instances for histogram-fill package


Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/histogram-fill/
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/histogram-fill
source-repository head
  type:     git
  location: http://github.com/Shimuuar/histogram-fill

Library
  Build-Depends:        base >=3 && <5,
                        cereal,
                        vector >= 0.7,
                        histogram-fill >= 0.6
  Exposed-modules:      Data.Histogram.Cereal
  Ghc-options:          -Wall
  Ghc-prof-options:     -auto-all
