Name:           histogram-fill-quickcheck
Version:        0.8.5.0
Synopsis:       QuickCheck instances for histogram-fill
Description:
  QuickCheck instances for histogram-fill package

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://github.com/Shimuuar/histogram-fill/
Category:       Data
Build-Type:     Simple

source-repository head
  type:     git
  location: http://github.com/Shimuuar/histogram-fill

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends: base           >= 4.6 && <5
               , vector         >= 0.7
               , histogram-fill >= 0.8.5.0
               , random
               , QuickCheck     >= 2
  Exposed-modules:
    Data.Histogram.QuickCheck
