Name:           histogram-fill-serialise
Version:        0.8.5.0
Synopsis:       Serialise instances for histogram-fill package
Description:
  Serialise instances for histogram-fill package

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/histogram-fill/
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog

source-repository head
  type:     git
  location: http://github.com/Shimuuar/histogram-fill

Library
  default-language: Haskell2010        
  Build-Depends:        base      >=3 && <5
                      , serialise >=0.2
                      , vector         >= 0.7
                      , histogram-fill >= 0.8.5.0
  Exposed-modules:      Data.Histogram.Serialise
  Ghc-options:          -Wall

