Name:           histogram-fill-tests
Version:        0.6.2.1
Synopsis:       Test suite for histograms
Description:
  Tests are moved to separate package because QuickCheck instances
  are placed into separate packages so histogram-fill's test suite have
  to depend on histogram-fill-quickcheck which depends on histogram-fill.
  Cabal could not resolve such cycle. (Issue 960)

Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/histogram-fill/
Category:       Data
Build-Type:     Simple


source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/histogram-fill
source-repository head
  type:     git
  location: http://github.com/Shimuuar/histogram-fill

Library

test-suite tests
  Type:           exitcode-stdio-1.0
  Ghc-options:    -O2 -Wall
  Main-is:        Test.hs
  Other-modules:
    Test.Histogram
    Test.Cereal
  Build-depends:
    base >=3 && < 5,
    histogram-fill,
    histogram-fill-cereal,
    histogram-fill-quickcheck,
    vector,
    cereal,
    QuickCheck >= 2,
    tasty,
    tasty-quickcheck
